<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        />
    <item android:id="@+id/invite_friends"
        android:title="@string/invite_friends_title"
        app:showAsAction="never"/>
    <item android:id="@+id/login_history"
        android:title="@string/login_history_title"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_connection"
        android:title="@string/connection_status_title"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_contact"
        android:title="@string/contact_title"
        app:showAsAction="never"/>
    <item android:id="@+id/our_website"
        android:title="@string/our_website_title"
        app:showAsAction="never"/>

</menu>