<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.chihwu.picker.SignUpActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_txtView"
            android:id="@+id/username_txtView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_info_txtView"
            android:layout_below="@+id/username_txtView"
            android:textStyle="bold"
          />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_txtView"
            android:id="@+id/password_txtView"
            android:textSize="14sp"
            android:layout_below="@+id/username_info_txtView"
            android:layout_marginTop="46dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_info_txtView"
            android:layout_below="@+id/password_txtView"
            android:textStyle="bold"
          />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_txtView"
            android:id="@+id/firstname_txtView"
            android:layout_below="@+id/password_info_txtView"
            android:textSize="14sp"
            android:layout_marginTop="46dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firtname_info_txtView"
            android:layout_below="@+id/firstname_txtView"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_txtView"
            android:id="@+id/lastname_txtView"
            android:layout_below="@+id/firtname_info_txtView"
            android:textSize="14sp"
            android:layout_marginTop="46dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastname_info_txtView"
            android:layout_below="@+id/lastname_txtView"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob_txtView"
            android:id="@+id/dob_txtView"
            android:textSize="14sp"
            android:layout_below="@+id/lastname_info_txtView"
            android:layout_marginTop="46dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dob_info_txtView"
            android:layout_below="@+id/dob_txtView"
            android:textStyle="bold"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txtView"
            android:id="@+id/email_txtView"
            android:layout_below="@+id/dob_info_txtView"
            android:textSize="14sp"
            android:layout_marginTop="46dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_info_txtView"
            android:layout_below="@+id/email_txtView"
            android:textStyle="bold"
          />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction_txtView"
            android:id="@+id/introduction_txtView"
            android:layout_below="@+id/email_info_txtView"
            android:layout_marginTop="46dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/introduction_info_txtView"
            android:layout_below="@+id/introduction_txtView"
            android:textStyle="bold"
           />


    </RelativeLayout>



</ScrollView>
